<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:paddingTop="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/text_distance" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_distance"
        android:text="@string/price"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/text_price" />

    <TextView
        android:id="@+id/text_autonomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_price"
        android:text="@string/autonomy"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/text_autonomy" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/edit_autonomy"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="@string/calculate_btn"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="10dp" />

    <TextView
        android:id="@+id/text_total_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_calculate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/total_cost"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_final_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_total_cost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/zero_money_reais_br"
        android:textSize="50sp"
        android:textStyle="bold" />

</RelativeLayout>